# iceberg-docker-demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
docker/catalog/: Dockerfile  init-catalog.py
docker/notebook/: Dockerfile  entrypoint.sh  load-fhvhv.py
docker/warehouse/: init-localstack.sh  init-minio.sh
notebooks/: reading.py
