[project]
name = "iceberg-docker-demo"
version = "0.1.0"
description = "Docker-based local development setup for Apache Iceberg."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=20.0.0",
    "pyiceberg[sql-postgres]>=0.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]
